--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "zeppelin-solidity"]
 	path = zeppelin-solidity
-	url = git@git.mapianist.co.kr:blockchain/zeppelin-solidity.git
+	url = git@github.com:MuzikaFoundation/zeppelin-solidity.git
