--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "fff": {
+    "truffle-lab": {
       "root": "",
       "projectType": "application",
       "prefix": "app",
@@ -11,7 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/fff",
+            "outputPath": "dist/trufle-lab",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,7 +29,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -56,18 +56,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fff:build"
+            "browserTarget": "trufle-lab:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fff:build:production"
+              "browserTarget": "trufle-lab:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fff:build"
+            "browserTarget": "trufle-lab:build"
           }
         },
         "test": {
@@ -79,7 +79,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               {
-                "input": "styles.css"
+                "input": "styles.scss"
               }
             ],
             "scripts": [],
@@ -111,7 +111,7 @@
         }
       }
     },
-    "fff-e2e": {
+    "trufle-lab-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -119,7 +119,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fff:serve"
+            "devServerTarget": "trufle-lab:serve"
           }
         },
         "lint": {
@@ -136,7 +136,7 @@
   },
   "schematics": {
     "@schematics/angular:component": {
-      "styleext": "css"
+      "styleext": "scss"
     }
   }
 }
