--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0-rc.0",
+    "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
