--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/trufle-lab",
+            "outputPath": "dist/truffle-lab",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,7 +29,10 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "scss/fontawesome-pro/css/fontawesome.min.css",
+              "scss/fontawesome-pro/css/fontawesome-all.min.css"
             ],
             "scripts": []
           },
@@ -56,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "trufle-lab:build"
+            "browserTarget": "truffle-lab:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "trufle-lab:build:production"
+              "browserTarget": "truffle-lab:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "trufle-lab:build"
+            "browserTarget": "truffle-lab:build"
           }
         },
         "test": {
@@ -111,7 +114,7 @@
         }
       }
     },
-    "trufle-lab-e2e": {
+    "truffle-lab-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -119,7 +122,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "trufle-lab:serve"
+            "devServerTarget": "truffle-lab:serve"
           }
         },
         "lint": {
