--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0-rc.1",
-    "@angular/common": "^6.0.0-rc.1",
-    "@angular/compiler": "^6.0.0-rc.1",
-    "@angular/core": "^6.0.0-rc.1",
-    "@angular/forms": "^6.0.0-rc.1",
-    "@angular/http": "^6.0.0-rc.1",
-    "@angular/platform-browser": "^6.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
-    "@angular/router": "^6.0.0-rc.1",
+    "@angular/animations": "^6.0.0-rc.5",
+    "@angular/common": "^6.0.0-rc.5",
+    "@angular/compiler": "^6.0.0-rc.5",
+    "@angular/core": "^6.0.0-rc.5",
+    "@angular/forms": "^6.0.0-rc.5",
+    "@angular/http": "^6.0.0-rc.5",
+    "@angular/platform-browser": "^6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
+    "@angular/router": "^6.0.0-rc.5",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0-rc.0",
+    "rxjs": "^6.0.0-uncanny-rc.7",
+    "rxjs-compat": "^6.0.0-uncanny-rc.7",
     "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0-rc.1",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular-devkit/build-angular": "~0.5.0",
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.0-rc.5",
-    "@angular/language-service": "^6.0.0-rc.1",
+    "@angular/language-service": "^6.0.0-rc.5",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
