--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0-uncanny-rc.7",
     "rxjs-compat": "^6.0.0-uncanny-rc.7",
+    "truffle-contract": "^3.0.5",
     "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.24"
   },
