--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rxjs": "^6.0.0-uncanny-rc.7",
     "rxjs-compat": "^6.0.0-uncanny-rc.7",
     "truffle-contract": "^3.0.5",
-    "web3": "0.20.6",
+    "web3": "^0.20.6",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
