Change git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "zeppelin-solidity"]
 	path = zeppelin-solidity
 	url = git@github.com:MuzikaFoundation/zeppelin-solidity.git
+	branch = muzika-develop
