--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "npm run test:angular && npm run test:contract",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test:angular": "ng test",
+    "test:contract": "truffle test"
   },
   "private": true,
   "dependencies": {
@@ -32,14 +34,16 @@
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular-devkit/build-angular": "~0.5.0",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.0-rc.5",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular/language-service": "^6.0.0-rc.5",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,7 +53,9 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "truffle": "^4.1.7",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
