--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "test:angular": "ng test",
-    "test:contract": "truffle test"
+    "test:contract": "truffle test",
+    "contract:compile": "truffle compile && npm run contract:interface",
+    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts ./build/contracts/*.json --force --outDir ./src/contracts"
   },
   "private": true,
   "dependencies": {
@@ -23,11 +25,13 @@
     "@angular/platform-browser": "^6.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
     "@angular/router": "^6.0.0-rc.5",
+    "bignumber.js": "^5.0.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^6.0.0-uncanny-rc.7",
     "rxjs-compat": "^6.0.0-uncanny-rc.7",
+    "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
@@ -50,6 +54,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "codelyzer": "~4.2.1",
+    "command-line-args": "^5.0.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -57,6 +62,7 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "prettier": "^1.12.1",
     "protractor": "~5.3.0",
     "solium": "^1.1.6",
     "truffle": "^4.1.7",
