--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "truffle-lab:build"
+            "browserTarget": "truffle-lab:build",
+            "hmr": true,
+            "hmrWarning": false
           },
           "configurations": {
             "production": {
