--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --hmr",
     "build": "ng build",
     "test": "npm run test:angular && npm run test:contract",
     "lint": "ng lint",
@@ -25,12 +25,13 @@
     "@angular/platform-browser": "^6.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
     "@angular/router": "^6.0.0-rc.5",
+    "@angularclass/hmr": "^2.1.3",
     "bignumber.js": "^5.0.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^2.0.4",
-    "rxjs": "^6.0.0-uncanny-rc.7",
-    "rxjs-compat": "^6.0.0-uncanny-rc.7",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
@@ -38,8 +39,8 @@
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.5.0",
-    "@angular/cli": "~6.0.0-rc.5",
+    "@angular-devkit/build-angular": "^0.5.9",
+    "@angular/cli": "^6.0.0-rc.6",
     "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular/language-service": "^6.0.0-rc.5",
     "@types/jasmine": "~2.8.6",
