feature(solium): add lint command in CI

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve --hmr",
     "build": "ng build",
     "test": "npm run test:angular && npm run test:contract",
-    "lint": "ng lint",
+    "lint": "solium -d contracts/",
     "e2e": "ng e2e",
     "test:angular": "ng test",
     "test:contract": "truffle test",
@@ -65,7 +65,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "^1.12.1",
     "protractor": "~5.3.0",
-    "solium": "^1.1.6",
+    "solium": "https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.7",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
