--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ test:contract:
     - git submodule init
     - git submodule update
   script:
+    - npm run lint
     - npm run test:contract
   tags:
     - frontend
