--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -1,13 +1,16 @@
 {
-  "extends": "solium:all",
-  "plugins": ["security"],
+  "extends": "solium:recommended",
+  "plugins": [
+    "security"
+  ],
   "rules": {
-    "quotes": ["error", "double"],
-    "no-empty-blocks": "off",
-    "indentation": ["error", 2],
-    "arg-overflow": ["warning", 3],
-    "security/enforce-explicit-visibility": ["error"],
-    "security/no-block-members": ["warning"],
-    "security/no-inline-assembly": ["warning"]
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "indentation": [
+      "error",
+      2
+    ]
   }
 }
