--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angularclass/hmr": "^2.1.3",
     "bignumber.js": "^5.0.0",
     "bootstrap": "^4.1.0",
+    "buffer": "^5.1.0",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^6.0.0",
