refactor: set angular monorepo projects structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "muzika-coin": [
+        "./src/contracts/index.ts",
+        "./src/contracts/interface/MuzikaCoin.ts",
+        "./src/contracts/typechain-runtime.ts"
+      ]
+    }
   },
   "exclude": [
     "truffle.js",
