--- a/angular.json
+++ b/angular.json
@@ -12,24 +12,24 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/truffle-lab",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "index": "projects/wallet/src/index.html",
+            "main": "projects/wallet/src/main.ts",
+            "polyfills": "projects/wallet/src/polyfills.ts",
+            "tsConfig": "projects/wallet/tsconfig.app.json",
             "assets": [
               {
                 "glob": "favicon.ico",
-                "input": "src",
+                "input": "projects/wallet/src",
                 "output": "/"
               },
               {
                 "glob": "**/*",
-                "input": "src/assets",
+                "input": "projects/wallet/src/assets",
                 "output": "/assets"
               }
             ],
             "styles": [
-              "src/styles.scss",
+              "projects/wallet/src/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "scss/fontawesome-pro/css/fontawesome.min.css",
               "scss/fontawesome-pro/css/fontawesome-all.min.css"
@@ -40,8 +40,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "projects/wallet/src/environments/environment.ts",
+                  "with": "projects/wallet/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -78,10 +78,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "main": "projects/wallet/src/test.ts",
+            "polyfills": "projects/wallet/src/polyfills.ts",
+            "tsConfig": "projects/wallet/tsconfig.spec.json",
+            "karmaConfig": "projects/wallet/src/karma.conf.js",
             "styles": [
               {
                 "input": "styles.scss"
@@ -106,8 +106,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "projects/wallet/tsconfig.app.json",
+              "projects/wallet/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -117,20 +117,133 @@
       }
     },
     "truffle-lab-e2e": {
-      "root": "e2e/",
+      "root": "projects/wallet/e2e/",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "projects/wallet/e2e/protractor.conf.js",
             "devServerTarget": "truffle-lab:serve"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "projects/wallet/e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "marketplace": {
+      "root": "",
+      "projectType": "application",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/marketplace",
+            "index": "projects/marketplace/src/index.html",
+            "main": "projects/marketplace/src/main.ts",
+            "polyfills": "projects/marketplace/src/polyfills.ts",
+            "tsConfig": "projects/marketplace/src/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "favicon.ico",
+                "input": "projects/marketplace/src",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "projects/marketplace/src/assets",
+                "output": "/assets"
+              }
+            ],
+            "styles": [
+              "projects/marketplace/src/styles.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "scss/fontawesome-pro/css/fontawesome.min.css",
+              "scss/fontawesome-pro/css/fontawesome-all.min.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/marketplace/src/environments/environment.ts",
+                  "with": "projects/marketplace/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "marketplace:build",
+            "hmr": true,
+            "hmrWarning": false
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "marketplace:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "marketplace:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/marketplace/src/test.ts",
+            "polyfills": "projects/marketplace/src/polyfills.ts",
+            "tsConfig": "projects/marketplace/tsconfig.spec.json",
+            "karmaConfig": "projects/marketplace/src/karma.conf.js",
+            "styles": [
+              {
+                "input": "styles.scss"
+              }
+            ],
+            "scripts": [],
+            "assets": [
+              {
+                "glob": "favicon.ico",
+                "input": "projects/marketplace/src/",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "projects/marketplace/src/assets",
+                "output": "/assets"
+              }
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/marketplace/tsconfig.app.json",
+              "projects/marketplace/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
