--- a/package.json
+++ b/package.json
@@ -4,33 +4,35 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr",
-    "build": "ng build",
+    "start": "ng serve --hmr --project truffle-lab",
+    "build": "ng build --project truffle-lab",
+    "build:market": "ng build --project marketplace",
     "test": "npm run test:angular && npm run test:contract",
     "lint": "solium -d contracts/",
-    "e2e": "ng e2e",
-    "test:angular": "ng test",
+    "e2e": "ng e2e --project truffle-lab",
+    "test:angular": "ng test --project truffle-lab",
     "test:contract": "truffle test",
     "contract:compile": "truffle compile && npm run contract:interface",
     "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts ./build/contracts/*.json --force --outDir ./src/contracts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0-rc.5",
-    "@angular/common": "^6.0.0-rc.5",
-    "@angular/compiler": "^6.0.0-rc.5",
-    "@angular/core": "^6.0.0-rc.5",
-    "@angular/forms": "^6.0.0-rc.5",
-    "@angular/http": "^6.0.0-rc.5",
-    "@angular/platform-browser": "^6.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
-    "@angular/router": "^6.0.0-rc.5",
+    "@angular/animations": "^6.0.0-rc.6",
+    "@angular/common": "^6.0.0-rc.6",
+    "@angular/compiler": "^6.0.0-rc.6",
+    "@angular/core": "^6.0.0-rc.6",
+    "@angular/forms": "^6.0.0-rc.6",
+    "@angular/http": "^6.0.0-rc.6",
+    "@angular/platform-browser": "^6.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.6",
+    "@angular/router": "^6.0.0-rc.6",
     "@angularclass/hmr": "^2.1.3",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
     "core-js": "^2.5.4",
+    "fs-extra": "^5.0.0",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
@@ -41,10 +43,10 @@
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.5.9",
-    "@angular/cli": "^6.0.0-rc.6",
-    "@angular/compiler-cli": "^6.0.0-rc.5",
-    "@angular/language-service": "^6.0.0-rc.5",
+    "@angular-devkit/build-angular": "^0.5.11",
+    "@angular/cli": "^6.0.0-rc.8",
+    "@angular/compiler-cli": "^6.0.0-rc.6",
+    "@angular/language-service": "^6.0.0-rc.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -60,17 +62,16 @@
     "command-line-args": "^5.0.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
     "prettier": "^1.12.1",
     "protractor": "~5.3.0",
-    "solium": "https://github.com/duaraghav8/Solium.git#develop",
-    "truffle": "^4.1.7",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
+    "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
+    "ts-node": "^6.0.2",
+    "tslint": "^5.9.1",
     "typescript": "~2.7.2"
   }
 }
