--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:angular": "ng test --project truffle-lab",
     "test:contract": "truffle test",
     "contract:compile": "truffle compile && npm run contract:interface",
-    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts ./build/contracts/*.json --force --outDir ./src/contracts"
+    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts ./build/contracts/*.json --force --outDir ./projects/wallet/src/contracts"
   },
   "private": true,
   "dependencies": {
@@ -33,14 +33,14 @@
     "buffer": "^5.1.0",
     "core-js": "^2.5.4",
     "fs-extra": "^5.0.0",
+    "fsevents": "^1.2.3",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.0.0",
     "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
-    "zone.js": "^0.8.24"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.5.11",
