--- a/projects/marketplace/tsconfig.app.json
+++ b/projects/marketplace/tsconfig.app.json
@@ -4,7 +4,14 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "types": ["node"],
-    "typeRoots": [ "../node_modules/@types" ]
+    "typeRoots": [ "../node_modules/@types" ],
+    "paths": {
+      "muzika-coin": [
+        "../wallet/src/contracts/index.ts",
+        "../wallet/src/contracts/interface/MuzikaCoin.ts",
+        "../wallet/src/contracts/typechain-runtime.ts"
+      ]
+    }
   },
   "exclude": [
     "src/test.ts",
