--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:angular": "ng test --project truffle-lab",
     "test:contract": "truffle test",
     "contract:compile": "truffle compile && npm run contract:interface",
-    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts ./build/contracts/*.json --force --outDir ./projects/wallet/src/contracts"
+    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts --glob './build/contracts/*.json' --force --outDir ./projects/wallet/src/contracts"
   },
   "private": true,
   "dependencies": {
