--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
     "core-js": "^2.5.4",
+    "eth-sig-util": "^1.4.2",
+    "ethereumjs-abi": "^0.6.5",
+    "ethereumjs-util": "^5.2.0",
+    "ethereumjs-wallet": "^0.6.0",
     "fs-extra": "^5.0.0",
     "fsevents": "^1.2.3",
     "ngx-bootstrap": "^2.0.4",
