refactor(contracts): remove contracts from muzika-core

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "zeppelin-solidity"]
-	path = zeppelin-solidity
-	url = git@github.com:MuzikaFoundation/zeppelin-solidity.git
-	branch = muzika-develop
+[submodule "muzika-contract"]
+	path = muzika-contract
+	url = git@github.com:MuzikaFoundation/muzika-contract.git
