--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,12 +49,8 @@ test:contract:
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
 
-    - git submodule init
-    - git submodule update
-    - cd muzika-contract/
-    - git submodule init
-    - git submodule update
-    - cd ../
+    - git submodule update --init --recursive
+    - git submodule foreach --recursive git submodule update --init
   script:
     - npm run contract:compile
   tags:
