--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "e2e": "ng e2e --project truffle-lab",
     "test:angular": "ng test --project truffle-lab",
     "contract:compile": "cd muzika-contract/ && truffle compile && cd ../ && npm run contract:interface",
-    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts --glob './muzika-contract/build/contracts/*.json' --force --outDir ./projects/wallet/src/contracts"
+    "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts -p typechain.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0-rc.6",
-    "@angular/common": "^6.0.0-rc.6",
-    "@angular/compiler": "^6.0.0-rc.6",
-    "@angular/core": "^6.0.0-rc.6",
-    "@angular/forms": "^6.0.0-rc.6",
-    "@angular/http": "^6.0.0-rc.6",
-    "@angular/platform-browser": "^6.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.6",
-    "@angular/router": "^6.0.0-rc.6",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@angularclass/hmr": "^2.1.3",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
@@ -39,6 +39,7 @@
     "fsevents": "^1.2.3",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
@@ -47,9 +48,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.5.11",
-    "@angular/cli": "^6.0.0-rc.8",
-    "@angular/compiler-cli": "^6.0.0-rc.6",
-    "@angular/language-service": "^6.0.0-rc.6",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
