--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@0xproject/types": "^0.6.1",
     "@angular-devkit/build-angular": "^0.5.11",
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.0.0",
