--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
+    "ethereumjs-wallet-browser": "^0.6.0",
     "fs-extra": "^5.0.0",
     "fsevents": "^1.2.3",
     "ngx-bootstrap": "^2.0.4",
@@ -44,6 +45,7 @@
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
+    "web3-provider-engine": "^14.0.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -60,6 +62,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
+    "browserify": "^16.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
