--- a/package.json
+++ b/package.json
@@ -1,62 +1,58 @@
 {
-  "name": "truffle-lab",
-  "version": "0.0.1",
+  "name": "muzika-core",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr --project truffle-lab",
-    "build": "ng build --project truffle-lab",
-    "build:market": "ng build --project marketplace",
-    "test": "npm run test:angular && npm run test:contract",
-    "lint": "solium -d contracts/",
-    "e2e": "ng e2e --project truffle-lab",
-    "test:angular": "ng test --project truffle-lab",
-    "contract:compile": "cd muzika-contract/ && truffle compile && cd ../ && npm run contract:interface",
+    "start": "ng serve --hmr",
+    "build": "ng build --prod --aot",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "contract:compile": "cd muzika-contract/ && truffle compile",
     "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts -p typechain.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
     "@angularclass/hmr": "^2.1.3",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
-    "core-js": "^2.5.4",
+    "core-js": "^2.4.1",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
     "fs-extra": "^5.0.0",
-    "fsevents": "^1.2.3",
     "ngx-bootstrap": "^2.0.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^5.5.6",
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.5",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
-    "@angular-devkit/build-angular": "^0.5.11",
-    "@angular/cli": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -66,23 +62,21 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^4.0.1",
     "command-line-args": "^5.0.2",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "^1.12.1",
-    "protractor": "~5.3.0",
+    "protractor": "~5.1.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
-    "ts-node": "^6.0.2",
-    "tslint": "^5.9.1",
-    "typescript": "~2.7.2"
-  },
-  "optionalDependencies": {
-    "fsevents": "~1.2.3"
+    "truffle": "^4.1.8",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
