--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "es5",
     "typeRoots": [
       "node_modules/@types",
-      "projects/wallet/src/typings"
+      "src/typings"
     ],
     "lib": [
       "es2017",
