--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "@angularclass/hmr": "^2.1.3",
+    "alertify.js": "^1.0.12",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
