refactor(project): refactor web3 module

--- a/projects/wallet/tsconfig.spec.json
+++ b/projects/wallet/tsconfig.spec.json
@@ -6,7 +6,10 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "paths": {
+      "@muzika/core": "projects/core/index.ts"
+    }
   },
   "files": [
     "src/test.ts",
