--- a/projects/core/tsconfig.json
+++ b/projects/core/tsconfig.json
@@ -6,12 +6,11 @@
     "types": ["node"],
     "typeRoots": [
       "../../node_modules/@types",
-      "src/typings"
+      "src/types"
     ]
   },
   "exclude": [
     "src/test.ts",
-    "**/*.spec.ts",
-    "truffle.js"
+    "**/*.spec.ts"
   ]
 }
