--- a/projects/wallet/tsconfig.json
+++ b/projects/wallet/tsconfig.json
@@ -1,14 +1,25 @@
 {
-  "extends": "../../tsconfig.json",
+  "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "../../out-tsc/app",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es5",
     "module": "es2015",
     "types": ["node"],
     "typeRoots": [
       "../../node_modules/@types"
     ],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "paths": {
-      "@muzika/core": ["projects/core/index.ts"]
+      "@muzika/core": ["../core/index.ts"]
     }
   },
   "exclude": [
