--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr",
+    "start": "ng serve --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "build": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "@angularclass/hmr": "^2.1.3",
+    "@ledgerhq/hw-transport-u2f": "^4.7.3",
+    "@ledgerhq/web3-subprovider": "^4.11.1",
     "alertify.js": "^1.0.12",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
