Refactor Project - Divide into 3 environments, which are dev, stage and prod: Local network, Ropsten network and Main network respectively. - Create prototype project and set up scripts and env. That works in process. - Fix minor code mistake.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start": "npm run start:wallet",
+    "start:wallet": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:wallet:stage": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment stage",
+    "start:wallet:prod": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment prod",
+    "start:prototype": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:prototype:stage": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment stage",
+    "start:prototype:prod": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment prod",
     "build": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
