refactor(project): Remove icons component but manage with individual module BrandIconModule.

--- a/projects/brand-icon/tsconfig.json
+++ b/projects/brand-icon/tsconfig.json
@@ -19,8 +19,7 @@
       "dom"
     ],
     "paths": {
-      "@muzika/core": ["../core/index.ts"],
-      "@muzika/brand-icon": ["../brand-icon/index.ts"]
+      "@muzika/core": ["projects/core/index.ts"]
     }
   },
   "exclude": [
