--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
+    "stream": "0.0.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
+    "@angular-devkit/build-angular": "^0.6.1",
     "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
@@ -86,7 +88,6 @@
     "truffle": "^4.1.8",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.1"
+    "typescript": "2.7.2"
   }
 }
