feature(ngv6): support browserify

--- a/projects/prototype/tsconfig.json
+++ b/projects/prototype/tsconfig.json
@@ -19,6 +19,8 @@
       "dom"
     ],
     "paths": {
+      "stream": ["../../node_modules/stream-browserify/index.js"],
+      "vm": ["../../node_modules/vm-browserify/index.js"],
       "@muzika/core": ["../core/index.ts"],
       "@muzika/brand-icon": ["../brand-icon/index.ts"]
     }
