--- a/angular.json
+++ b/angular.json
@@ -4,8 +4,8 @@
   "newProjectRoot": "projects",
   "projects": {
     "muzika-wallet": {
-      "root": "",
-      "sourceRoot": "src",
+      "root": "projects/wallet/",
+      "sourceRoot": "projects/wallet/",
       "projectType": "application",
       "architect": {
         "build": {
@@ -59,7 +59,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "muzika-wallet:build"
+            "browserTarget": "muzika-wallet:build",
+            "hmr": true,
+            "hmrWarning": false
           },
           "configurations": {
             "stage": {
@@ -195,7 +197,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "muzika-prototype:build"
+            "browserTarget": "muzika-prototype:build",
+            "hmr": true,
+            "hmrWarning": false
           },
           "configurations": {
             "stage": {
