--- a/package.json
+++ b/package.json
@@ -37,39 +37,40 @@
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.6",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
     "fs-extra": "^5.0.0",
-    "ngx-bootstrap": "^2.0.4",
+    "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
-    "stream": "0.0.2",
+    "stream-browserify": "^2.0.1",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
+    "vm-browserify": "^1.0.1",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
-    "@angular-devkit/build-angular": "^0.6.1",
+    "@angular-devkit/build-angular": "^0.6.2",
     "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/jasmine": "^2.8.7",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "~10.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
-    "browserify": "^16.2.0",
+    "browserify": "^16.2.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
