chore(project): add command shortcut

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ng": "ng",
     "start": "npm run start:wallet",
     "start:wallet": "ng serve --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "sw": "npm run start:wallet",
     "start:wallet:stage": "npm run start:wallet -- -c stage",
     "start:wallet:prod": "npm run start:wallet -- -c production",
     "start:prototype": "ng serve --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "sp": "npm run start:prototype",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
     "build": "ng build --prod --aot",
@@ -21,11 +23,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.0.2",
+    "@angular/cdk": "^6.0.2",
     "@angular/common": "6.0.2",
     "@angular/compiler": "6.0.2",
     "@angular/core": "6.0.2",
     "@angular/forms": "6.0.2",
     "@angular/http": "6.0.2",
+    "@angular/material": "^6.0.2",
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
