--- a/projects/wallet/tsconfig.json
+++ b/projects/wallet/tsconfig.json
@@ -21,8 +21,7 @@
     "paths": {
       "stream": ["../../node_modules/stream-browserify/index.js"],
       "vm": ["../../node_modules/vm-browserify/index.js"],
-      "@muzika/core": ["../core/index.ts"],
-      "@muzika/brand-icon": ["../brand-icon/index.ts"]
+      "@muzika/core": ["../core/index.ts"]
     }
   },
   "exclude": [
