lint: lint rule apply

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "sp": "npm run start:prototype",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
-    "build": "ng build --prod --aot",
+    "build:wallet": "ng build --project muzika-wallet",
+    "build:wallet:stage": "npm run build:wallet -- -c stage",
+    "build:wallet:prod": "npm run build:wallet -- -c production",
+    "build:prototype": "ng build --project muzika-prototype",
+    "build:prototype:stage": "npm run build:prototype -- -c stage",
+    "build:prototype:prod": "npm run build:prototype -- -c production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
