feature(ipfs-viewer): add ipfs-viewer project to monorepo (electron)

--- a/angular.json
+++ b/angular.json
@@ -309,6 +309,145 @@
           }
         }
       }
+    },
+    "muzika-ipfs-viewer": {
+      "root": "",
+      "sourceRoot": "projects/viewer/src/",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist",
+            "index": "projects/viewer/src/index.html",
+            "main": "projects/viewer/src/main.ts",
+            "tsConfig": "projects/viewer/src/tsconfig.app.json",
+            "polyfills": "projects/viewer/src/polyfills.ts",
+            "assets": [
+              "projects/viewer/src/assets",
+              "projects/viewer/src/favicon.ico",
+              "projects/viewer/src/favicon.png",
+              "projects/viewer/src/favicon.icns",
+              "projects/viewer/src/favicon.256x256.png",
+              "projects/viewer/src/favicon.512x512.png"
+            ],
+            "styles": [
+              "projects/viewer/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "stage": {
+              "optimization": false,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "fileReplacements": [
+                {
+                  "replace": "projects/viewer/src/environments/environment.ts",
+                  "with": "projects/viewer/src/environments/environment.stage.ts"
+                }
+              ]
+            },
+            "production": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "projects/viewer/src/environments/environment.ts",
+                  "with": "projects/viewer/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "muzika-ipfs-viewer:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "muzika-ipfs-viewer:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "muzika-ipfs-viewer:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/viewer/src/test.ts",
+            "polyfills": "projects/viewer/src/polyfills-test.ts",
+            "tsConfig": "projects/viewer/src/tsconfig.spec.json",
+            "karmaConfig": "projects/viewer/src/karma.conf.js",
+            "scripts": [],
+            "styles": [
+              "projects/viewer/src/styles.scss"
+            ],
+            "assets": [
+              "projects/viewer/src/assets",
+              "projects/viewer/src/favicon.ico",
+              "projects/viewer/src/favicon.png",
+              "projects/viewer/src/favicon.icns",
+              "projects/viewer/src/favicon.256x256.png",
+              "projects/viewer/src/favicon.512x512.png"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/viewer/src/tsconfig.app.json",
+              "projects/viewer/src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "muzika-ipfs-viewer-e2e": {
+      "root": "e2e",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "muzika-ipfs-viewer:serve"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "muzika-wallet",
