--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "muzika-core",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "main.js",
   "scripts": {
+    "postinstall": "npx electron-builder install-app-deps",
     "ng": "ng",
     "start": "npm run start:wallet",
     "start:wallet": "ng serve --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
-    "sw": "npm run start:wallet",
+    "sw": "npm run start:wallet ",
     "start:wallet:stage": "npm run start:wallet -- -c stage",
     "start:wallet:prod": "npm run start:wallet -- -c production",
     "start:prototype": "ng serve --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
-    "sp": "npm run start:prototype",
+    "start:viewer": "npm-run-all -p serve:viewer electron:serve",
+    "serve:viewer": "ng serve --project muzika-ipfs-viewer -o",
+    "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
     "build:wallet": "ng build --project muzika-wallet",
@@ -19,6 +23,15 @@
     "build:prototype": "ng build --project muzika-prototype",
     "build:prototype:stage": "npm run build:prototype -- -c stage",
     "build:prototype:prod": "npm run build:prototype -- -c production",
+    "build:viewer": "npm run electron:tsc && ng build --project muzika-ipfs-viewer",
+    "build:viewer:stage": "npm run build:viewer -- -c stage",
+    "build:viewer:prod": "npm run build:viewer -- -c production",
+    "electron:tsc": "tsc main.ts",
+    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
+    "electron:local": "npm run build:viewer:prod && electron .",
+    "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
+    "electron:windows": "npm run build:viewer:prod && npx electron-builder build --windows",
+    "electron:mac": "npm run build:viewer:prod && npx electron-builder build --mac",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -41,6 +54,8 @@
     "@angularclass/hmr": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "@ledgerhq/web3-subprovider": "^4.12.0",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
     "alertify.js": "^1.0.12",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
@@ -53,7 +68,10 @@
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
     "fs-extra": "^5.0.0",
+    "ipfs": "^0.28.2",
+    "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
+    "popper.js": "^1.14.3",
     "rxjs": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "stream-browserify": "^2.0.1",
@@ -72,7 +90,7 @@
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.1.1",
+    "@types/node": "~8.9.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -84,6 +102,9 @@
     "chai-bignumber": "^2.0.2",
     "codelyzer": "^4.3.0",
     "command-line-args": "^5.0.2",
+    "electron": "2.0.1",
+    "electron-builder": "20.13.4",
+    "electron-reload": "1.2.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^2.0.2",
@@ -91,12 +112,15 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.3",
+    "npx": "10.2.0",
     "prettier": "^1.12.1",
     "protractor": "^5.3.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.8",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
-    "typescript": "2.7.2"
+    "typescript": "2.7.2",
+    "wait-on": "^2.1.0"
   }
 }
