--- a/projects/viewer/tsconfig.json
+++ b/projects/viewer/tsconfig.json
@@ -8,8 +8,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": ["node", "web3"],
     "typeRoots": [
-      "node_modules/@types"
+      "../../node_modules/@types",
+      "../../node_modules/@0xproject/typescript-typings/types"
     ],
     "lib": [
       "es2017",
