--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
+    "@0xproject/typescript-typings": "^0.3.1",
     "@angular-devkit/build-angular": "^0.6.3",
     "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^6.0.2",
