--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,5 +53,10 @@ test:contract:
     - git submodule foreach --recursive git submodule update --init
   script:
     - npm run contract:compile
+    - npm run lint
+    - npm run build:core
+    - npm run build:prototype
+    - npm run build:wallet
+    - npm run build:viewer
   tags:
     - frontend
