--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
   - npm run contract:compile
   - npm run lint
+  - npm run build:core
   - npm run build:prototype
   - npm run build:wallet
   - npm run build:viewer
-
