--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
+    "build:core:": "ng build --project muzika-core",
     "build:wallet": "ng build --project muzika-wallet",
     "build:wallet:stage": "npm run build:wallet -- -c stage",
     "build:wallet:prod": "npm run build:wallet -- -c production",
@@ -86,6 +87,7 @@
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.1",
     "@angular-devkit/build-angular": "^0.6.3",
+    "@angular-devkit/build-ng-packagr": "^0.6.3",
     "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
@@ -113,6 +115,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^2.4.5",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.12.1",
