--- a/projects/core/tsconfig.json
+++ b/projects/core/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "../../out-tsc/app",
-    "sourceMap": true,
-    "declaration": false,
+    "sourceMap": false,
+    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -13,8 +13,7 @@
     "types": ["node", "web3"],
     "typeRoots": [
       "../../node_modules/@types",
-      "../../node_modules/@0xproject/typescript-typings/types",
-      "src/types"
+      "../../node_modules/@0xproject/typescript-typings/types"
     ],
     "lib": [
       "es2017",
