fix(ionic): define cordova-plugins for wallet app

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,12 @@ testem.log
 Thumbs.db
 
 # Truffle build directory
-build
-ipfs-muzika
-app-builds
+build/
+ipfs-muzika/
+app-builds/
 main.js
 projects/viewer/node_src/**/*.js
+
+platforms/
+plugins/
+www/
