--- a/package.json
+++ b/package.json
@@ -68,6 +68,13 @@
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
     "buffer": "^5.1.0",
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.6",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
@@ -134,5 +141,18 @@
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
     "webpack-cli": "^2.1.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
