--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.10",
     "@ionic/angular": "4.0.0-alpha.7",
     "@ionic/schematics-angular": "latest",
+    "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "@ledgerhq/web3-subprovider": "^4.12.0",
     "@ngx-translate/core": "^10.0.1",
@@ -75,6 +76,7 @@
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.1",
     "core-js": "^2.5.6",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
@@ -148,7 +150,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android",
