--- a/package.json
+++ b/package.json
@@ -42,17 +42,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
+    "@angular/animations": "^6.0.3",
     "@angular/cdk": "^6.1.0",
-    "@angular/common": "^6.0.2",
-    "@angular/compiler": "^6.0.2",
-    "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
-    "@angular/http": "^6.0.2",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
     "@angular/material": "^6.1.0",
-    "@angular/platform-browser": "^6.0.2",
-    "@angular/platform-browser-dynamic": "^6.0.2",
-    "@angular/router": "^6.0.2",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "5.0.0-beta.10",
     "@ionic-native/splash-screen": "5.0.0-beta.10",
@@ -62,7 +62,8 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "@ledgerhq/web3-subprovider": "^4.12.0",
-    "@ngx-translate/core": "^10.0.1",
+    "@muzika/core": "^0.0.2",
+    "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "alertify.js": "^1.0.12",
     "bignumber.js": "^5.0.0",
@@ -72,8 +73,8 @@
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-keyboard": "^2.1.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.1",
@@ -88,7 +89,7 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.1.0",
+    "rxjs": "^6.2.0",
     "safe-buffer": "^5.1.2",
     "stream-browserify": "^2.0.1",
     "truffle-contract": "^3.0.5",
@@ -100,12 +101,12 @@
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
-    "@0xproject/typescript-typings": "^0.3.1",
+    "@0xproject/typescript-typings": "^0.3.2",
     "@angular-devkit/build-angular": "^0.6.3",
     "@angular-devkit/build-ng-packagr": "^0.6.3",
     "@angular/cli": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.2",
-    "@angular/language-service": "^6.0.2",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
