update: upgrade truffle version to 4.1.11 and add tassign

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "stream-browserify": "^2.0.1",
+    "tassign": "^1.0.0",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "vm-browserify": "^1.0.1",
@@ -140,7 +141,7 @@
     "prettier": "^1.12.1",
     "protractor": "^5.3.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
-    "truffle": "^4.1.9",
+    "truffle": "^4.1.11",
     "ts-loader": "^4.3.0",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
