--- a/projects/viewer/tsconfig.json
+++ b/projects/viewer/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "baseUrl": "./",
+    "outDir": "../../out-tsc/app",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "module": "es2015",
     "types": ["node", "web3"],
     "typeRoots": [
       "../../node_modules/@types",
@@ -18,6 +20,15 @@
       "es2016",
       "es2015",
       "dom"
-    ]
-  }
+    ],
+    "paths": {
+      "stream": ["../../node_modules/stream-browserify/index.js"],
+      "vm": ["../../node_modules/vm-browserify/index.js"],
+      "@muzika/core": ["../core/index.ts"]
+    }
+  },
+  "exclude": [
+    "src/test.ts",
+    "**/*.spec.ts"
+  ]
 }
