--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:wallet:stage": "npm run start:wallet -- -c stage",
     "start:wallet:prod": "npm run start:wallet -- -c production",
     "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
-    "start:viewer": "npm-run-all -p serve:viewer electron:serve",
+    "start:viewer": "node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
     "serve:viewer": "ng serve --project muzika-ipfs-viewer",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
@@ -29,9 +29,13 @@
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
-    "electron:local": "npm run build:viewer:prod && electron .",
+    "preelectron:dev": "cross-env ENV=dev node set_environments.js",
+    "electron:dev": "npm run build:viewer:prod && electron .",
+    "preelectron:linux": "cross-env ENV=prod node set_environments.js",
     "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
+    "preelectron:windows": "cross-env ENV=prod node set_environments.js",
     "electron:windows": "npm run build:viewer:prod && npx electron-builder build --windows",
+    "preelectron:mac": "cross-env ENV=prod node set_environments.js",
     "electron:mac": "npm run build:viewer:prod && npx electron-builder build --mac",
     "publish:core": "npm run build:core && npm publish dist/muzika-core/ --access=public",
     "test": "ng test",
@@ -140,6 +144,7 @@
     "npx": "10.2.0",
     "prettier": "^1.12.1",
     "protractor": "^5.3.2",
+    "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.11",
     "ts-loader": "^4.3.0",
