chore(project): fix tsconfig for viewer project

--- a/projects/viewer/tsconfig.json
+++ b/projects/viewer/tsconfig.json
@@ -29,6 +29,9 @@
   },
   "exclude": [
     "src/test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "dist",
+    "app-builds",
+    "node_modules"
   ]
 }
