--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start:wallet:prod": "npm run start:wallet -- -c production",
     "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:viewer": "node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
+    "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
     "serve:viewer": "ng serve --project muzika-ipfs-viewer",
+    "serve:viewer:stage": "npm run serve:viewer -- -c stage",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
@@ -130,6 +132,7 @@
     "chai-bignumber": "^2.0.2",
     "codelyzer": "^4.3.0",
     "command-line-args": "^5.0.2",
+    "cross-env": "^5.1.6",
     "electron": "2.0.2",
     "electron-builder": "20.15.0",
     "electron-rebuild": "^1.7.3",
