refactor(login): login available

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
     "preelectron:dev": "cross-env ENV=dev node set_environments.js",
-    "electron:dev": "npm run build:viewer:prod && electron .",
-    "preelectron:linux": "cross-env ENV=prod node set_environments.js",
+    "electron:dev": "npm run build:viewer && electron .",
+    "preelectron:linux": "cross-env ENV=stage node set_environments.js",
     "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
-    "preelectron:windows": "cross-env ENV=prod node set_environments.js",
-    "electron:windows": "npm run build:viewer:prod && npx electron-builder build --windows",
-    "preelectron:mac": "cross-env ENV=prod node set_environments.js",
-    "electron:mac": "npm run build:viewer:prod && npx electron-builder build --mac",
+    "preelectron:windows": "cross-env ENV=stage node set_environments.js",
+    "electron:windows": "npm run build:viewer:stage && npx electron-builder build --windows",
+    "preelectron:mac": "cross-env ENV=stage node set_environments.js",
+    "electron:mac": "npm run build:viewer:stage && npx electron-builder build --mac",
     "publish:core": "npm run build:core && npm publish dist/muzika-core/ --access=public",
     "test": "ng test",
     "lint": "ng lint",
