fix(viewer): add hmr to work and sheet music uploader

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:viewer": "cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
     "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
-    "serve:viewer": "ng serve --project muzika-ipfs-viewer",
+    "serve:viewer": "ng serve --project muzika-ipfs-viewer --hmr",
     "serve:viewer:stage": "npm run serve:viewer -- -c stage",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
