--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "muzika-core",
-  "version": "0.0.1",
+  "name": "muzika-platform",
+  "version": "0.0.3",
   "license": "MIT",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "npm run start:wallet",
-    "start:wallet": "ng serve -o --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:wallet": "ng serve muzika-wallet -o --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "sw": "npm run start:wallet ",
     "start:wallet:stage": "npm run start:wallet -- -c stage",
     "start:wallet:prod": "npm run start:wallet -- -c production",
-    "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:prototype": "ng serve muzika-prototype -o --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:viewer": "cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:viewer electron:serve",
     "start:viewer:stage": "cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:viewer:stage electron:serve",
-    "serve:viewer": "ng serve --project muzika-ipfs-viewer --hmr",
+    "serve:viewer": "ng serve muzika-ipfs-viewer --hmr",
     "serve:viewer:stage": "npm run serve:viewer -- -c stage",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
-    "build:core": "ng build --project muzika-core",
-    "build:wallet": "ng build --project muzika-wallet",
+    "build:core": "ng build muzika-core",
+    "build:wallet": "ng build muzika-wallet",
     "build:wallet:stage": "npm run build:wallet -- -c stage",
     "build:wallet:prod": "npm run build:wallet -- -c production",
-    "build:prototype": "ng build --project muzika-prototype",
+    "build:prototype": "ng build muzika-prototype",
     "build:prototype:stage": "npm run build:prototype -- -c stage",
     "build:prototype:prod": "npm run build:prototype -- -c production",
-    "build:viewer": "npm run electron:tsc && ng build --project muzika-ipfs-viewer",
+    "build:viewer": "npm run electron:tsc && ng build muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
@@ -46,7 +46,6 @@
     "contract:compile": "cd muzika-contract/ && truffle compile",
     "contract:interface": "ts-node ./utils/TypeChain/lib/cli.ts -p typechain.json"
   },
-  "private": true,
   "dependencies": {
     "@angular-redux/store": "^9.0.0-beta.0",
     "@angular/animations": "^6.0.3",
